# advent-of-code-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
01/: main.py
02/: main.py
03/: main.py
aoc_01/: main.py  test_main.py
aoc_02/: main.py  test_main.py
aoc_03/: main.py  test_main.py
day_01/: main.py  test_main.py
day_02/: main.py  test_main.py
day_03/: main.py  test_main.py
day_04/: main.py  test_main.py
